# customer_churn_end_to_end_mlops

./: .dockerignore  .gitignore  Dockerfile  app.py  demo.py  projectflow.txt  pyproject.toml  requirements.txt
.github/workflows/: aws.yaml
artifact/07_08_2026_14_22_31/data_ingestion/ingested/: test.csv  train.csv
artifact/07_08_2026_14_22_31/data_transformation/transformed/: test.npy  train.npy
artifact/07_08_2026_14_22_31/model_trainer/trained_model/: xgb_model.pkl
artifact/07_08_2026_14_25_16/data_ingestion/ingested/: test.csv  train.csv
artifact/07_08_2026_14_25_16/data_transformation/transformed/: test.npy  train.npy
artifact/07_08_2026_14_25_16/data_transformation/transformed_object/: preprocessing.pkl
artifact/07_08_2026_14_25_16/model_trainer/trained_model/: xgb_model.pkl
artifact/07_08_2026_14_28_22/data_ingestion/feature_store/: data.csv
artifact/07_08_2026_14_28_22/data_ingestion/ingested/: test.csv  train.csv
artifact/07_08_2026_14_28_22/data_transformation/transformed/: test.npy  train.npy
config/: schema.yaml
notebook/: best_xgboost_model.pkl  customer_churn.ipynb  mongoDB_demo.ipynb  xgboost.pkl
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/: style.css
templates/: churn.html
(+11 files in other folders)
