[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-mlops"
version = "0.0.1"
description = "An end-to-end MLOps project for customer churn prediction"

authors = [
    {name = "Shehbaz Singh", email = "sandhushehbaz582@gmail.com"}
]

dynamic = ["dependencies"]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}